# claude-shared

./: .gitignore  .phase2-integration-log.md  .processed_hashes.txt  APPLE-NOTE-INBOX-V2.md  BEAD-CLOSE-AUDIT-2026-03-26.md  BEAD-CLOSE-AUDIT-2026-03-27.md  BEAD-CLOSE-AUDIT-2026-03-30.md  BEAD-CLOSE-AUDIT-2026-04-01.md  BEAD-CLOSE-AUDIT-2026-04-04.md  BEAD-CLOSE-AUDIT-2026-04-08.md  BEAD-CLOSE-AUDIT-2026-04-11.md  BEAD-CLOSE-AUDIT-2026-04-14.md  BEAD-CLOSE-AUDIT-2026-04-18.md  BEAD-CLOSE-AUDIT-2026-04-19.md  BEAD-CLOSE-AUDIT-2026-04-22.md  BEAD-CLOSE-AUDIT-2026-04-27.md  BEAD-CLOSE-AUDIT-2026-04-28.md  BEAD-CLOSE-AUDIT-2026-04-29.md  BEAD-CLOSE-AUDIT-2026-04-30.md  BEAD-CLOSE-AUDIT-2026-05-01.md  BEADS-AUDIT-2026-02-17.md  BEADS-HYGIENE-2026-03-09.md  BEADS-HYGIENE-2026-03-15.md  BEADS-HYGIENE-2026-03-16.md  BEADS-HYGIENE-2026-03-23.md  BEADS-HYGIENE-2026-03-30.md  BEADS-HYGIENE-2026-04-01.md  BEADS-HYGIENE-2026-04-06.md  BEADS-HYGIENE-2026-04-13.md  BEADS-HYGIENE-2026-04-14.md  BEADS-HYGIENE-2026-04-19.md  BEADS-HYGIENE-2026-04-27.md  BEADS-HYGIENE-2026-05-05.md  BEADS-HYGIENE-2026-05-06.md  BEADS-HYGIENE-2026-05-10.md  BEADS-HYGIENE-2026-05-15.md  BEADS-HYGIENE-2026-05-17.md  BEADS-HYGIENE-2026-05-19.md  CLEANUP-2026-02-18.md  CODEX-PROMPT-2026-02-17.md  (+77 more)
.exports/: content_hashes.json
agent-hooks/: audit-warning.sh  bead-code-probe.sh  bead-create-prompt.sh  bead-prompt-audit.sh  beads-decompose.sh  beads-prefix-guard.sh  block-git-push.sh  bypass-hardcoded-dirs.sh  cheatsheet-sync.sh  circuit-breaker.sh  compact-cadence.sh  compact-digest.sh  dashboard-verify-remind.sh  (+24 more)
(+332 files in other folders)
