[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-core"
version = "0.1.0"
description = "Claude-first shared-core package for HEALTH, WORK, TODO, and runtime deploy tooling."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "James Cherry"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
